src/test/resources/all/issues/silver/0050.vpr
// Any copyright is dedicated to the Public Domain.
// http://creativecommons.org/publicdomain/zero/1.0/

field f: Int
field x: Int

//:: ExpectedOutput(typechecker.error)
method test1(x: Ref)
  requires acc(x.x) // error: expected field
{}

//:: ExpectedOutput(typechecker.error)
method test2(x: Ref)
  requires acc(x.f) // no error
{}
